syntax = "proto3";
package chatpb;

enum ERetType{
    Success = 0;//成功
    RedisError = 1;//redis执行失败
    SQLError = 2;//mysql执行失败
    PwError = 100;//密码错误
    UnError = 101;//账错误
    UnExistError = 102;//账号已经存在
    UnNotStandard = 103;//账号不标准
    PwNotStandard = 104;//密码不标准
};
